@@ -2,6 +2,10 @@
 # ChangeLog for Niow
 #
 
+2010-02-07  snaka <snaka.gml@gmail.com>
+  * bin/notify-io-client.rb : Change close button and tray icon behavior.
+  * lib/vrextend/tray.rb : Add task-tray event dispatcher.
+
 2010-01-29  snaka <snaka.gml@gmail.com>
   * lib/notify-io.rb : Extract proxy authenticate information from environment variable 'http_proxy'.
   * test : Add test file.
